# reze-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  database  env.example  main.py  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md
scripts/: debug.py  populate_memvid.py  sitemap.xml
src/: __init__.py  config.py
src/api/: app.py
src/api/routers/: __init__.py  chat_router.py  common_router.py
src/api/schemas/: __init__.py  chat.py  common.py
src/celery/: __init__.py  app.py  scheduler.py  worker.py
src/database/: __init__.py  base.py  models.py  session.py
src/models/: __init__.py  resend.py
src/prompts/: __init__.py
src/services/: __init__.py  ai.py  conversation.py  memvid.py  prompt.py  rag.py  resend.py
src/static/: index.html
src/tools/: __init__.py  resend.py  resend_tools.py
src/utils/: __init__.py  document_chunker.py  text_utils.py
static/: index.html
tests/: __init__.py
