[project]
name = "reze-ai-agent"
version = "0.1.0"
description = "Reze - AI Agent for Resend.com with GLM 4.7 and Memvid RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-ai>=0.1.0",
    "loguru>=0.7.3",
    "memvid-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.263",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
defineConstant = { DEBUG = true }
reportMissingImports = "none"
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Windows"
venvPath = "."
venv = ".venv"
reportCallIssue = "none"
reportUnknownVariableType = false
reportUnusedImport = true
reportArgumentType = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]
